--- a/source/css/style.css
+++ b/source/css/style.css
@@ -22,9 +22,6 @@ a:hover .contacts__text {
     display: block;
 }
 
-
-
-
 .page {
     display: flex;
     flex-direction: column;
@@ -43,6 +40,10 @@ a:hover .contacts__text {
     flex: 1 1 auto;
     width: 100%;
     background-color: #e9e9e9;
+    background-image: url('./../img/background.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .header__wrapper {
